# gpowerswitch

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h.in  configure  configure.in  gPowerSwitch.glade  gPowerSwitch.gladep  main.c  powerSwitch.c  powerSwitch.h  psg-callbacks.c  psg-callbacks.h  psg-messages.c  psg-messages.h
